--- a/auth-service/pom.xml
+++ b/auth-service/pom.xml
@@ -13,7 +13,7 @@
     <artifactId>auth-service</artifactId>
 
     <dependencies>
-        <!-- Spring Boot Starters -->
+        <!-- Spring Boot -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
@@ -117,7 +117,7 @@
                     </dependency>
                 </dependencies>
                 <configuration>
-                    <jvmTarget>17</jvmTarget>
+                    <jvmTarget>${java.version}</jvmTarget>
                     <compilerPlugins>
                         <plugin>spring</plugin>
                         <plugin>no-arg</plugin>
