--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
       dockerfile: auth-service/Dockerfile
     container_name: auth-service
     ports:
-      - "8081:8081"
+      - "8081:8080"
     depends_on:
       - auth-db
     environment:
@@ -29,5 +29,35 @@ services:
       SECURITY_JWT_SECRET: thisisaverysecuresecretkeyforjwtmustbe32bytes!
       SECURITY_JWT_EXPIRATION: 3600000
 
+  license-db:
+    image: postgres:16
+    container_name: license-db
+    environment:
+      POSTGRES_DB: licensedb
+      POSTGRES_USER: license_user
+      POSTGRES_PASSWORD: secret
+    ports:
+      - "5434:5432"
+    volumes:
+      - license_data:/var/lib/postgresql/data
+
+  license-service:
+    build:
+      context: .
+      dockerfile: license-service/Dockerfile
+    container_name: license-service
+    ports:
+      - "8082:8080"
+    depends_on:
+      - license-db
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:postgresql://license-db:5432/licensedb
+      SPRING_DATASOURCE_USERNAME: license_user
+      SPRING_DATASOURCE_PASSWORD: secret
+      SECURITY_JWT_SECRET: thisisaverysecuresecretkeyforjwtmustbe32bytes!
+      SECURITY_JWT_EXPIRATION: 3600000
+      SYSTEM_TOKEN: super-secret-system-token
+
 volumes:
   auth_data:
+  license_data:
