--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,8 @@ services:
     container_name: auth-db
     environment:
       POSTGRES_DB: authdb
-      POSTGRES_USER: auth_user
-      POSTGRES_PASSWORD: secret
+      POSTGRES_USER: ${AUTH_DATASOURCE_USERNAME}
+      POSTGRES_PASSWORD: ${AUTH_DATASOURCE_PASSWORD}
     ports:
       - "5433:5432"
     volumes:
@@ -23,10 +23,10 @@ services:
       - auth-db
     environment:
       SPRING_DATASOURCE_URL: jdbc:postgresql://auth-db:5432/authdb
-      SPRING_DATASOURCE_USERNAME: auth_user
-      SPRING_DATASOURCE_PASSWORD: secret
+      SPRING_DATASOURCE_USERNAME: ${AUTH_DATASOURCE_USERNAME}
+      SPRING_DATASOURCE_PASSWORD: ${AUTH_DATASOURCE_PASSWORD}
       SPRING_JPA_HIBERNATE_DDL_AUTO: validate
-      SECURITY_JWT_SECRET: thisisaverysecuresecretkeyforjwtmustbe32bytes!
+      SECURITY_JWT_SECRET: ${SECURITY_JWT_SECRET}
       SECURITY_JWT_EXPIRATION: 3600000
 
   license-db:
@@ -34,8 +34,8 @@ services:
     container_name: license-db
     environment:
       POSTGRES_DB: licensedb
-      POSTGRES_USER: license_user
-      POSTGRES_PASSWORD: secret
+      POSTGRES_USER: ${LICENSE_DATASOURCE_USERNAME}
+      POSTGRES_PASSWORD: ${LICENSE_DATASOURCE_PASSWORD}
     ports:
       - "5434:5432"
     volumes:
@@ -52,11 +52,11 @@ services:
       - license-db
     environment:
       SPRING_DATASOURCE_URL: jdbc:postgresql://license-db:5432/licensedb
-      SPRING_DATASOURCE_USERNAME: license_user
-      SPRING_DATASOURCE_PASSWORD: secret
-      SECURITY_JWT_SECRET: thisisaverysecuresecretkeyforjwtmustbe32bytes!
+      SPRING_DATASOURCE_USERNAME: ${LICENSE_DATASOURCE_USERNAME}
+      SPRING_DATASOURCE_PASSWORD: ${LICENSE_DATASOURCE_PASSWORD}
       SECURITY_JWT_EXPIRATION: 3600000
-      SYSTEM_TOKEN: super-secret-system-token
+      SECURITY_JWT_SECRET: ${SECURITY_JWT_SECRET}
+      SECURITY_SYSTEM_TOKEN: ${SECURITY_SYSTEM_TOKEN}
 
 volumes:
   auth_data:
